--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -45,7 +45,7 @@
         // See comments in lib/Views/global.scss for further information about customising colors, logos, fonts etc.
         brandBarElements: [
             "",
-            "<a target=\"_blank\" href=\"http://www.earthdata.ch\"><img src=\"images/earthdata_logo.png\" height=\"52\" title=\"Version: {{version}}\" /></a>",
+            "<a target=\"_blank\" href=\"http://www.earthdata.ch\"><img src=\"images/earthdata_logo.svg\" height=\"52\" title=\"Version: {{version}}\" /></a>",
             ""
         ],
         // Shown when things go wrong.
